fix to support java 17 in tests